GH #3: upgrade to junit 5 continued